--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
+    "formik": "^2.4.6",
     "next": "15.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
